Reduce attiny13 firmware writing speed

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,3 +14,6 @@ board = attiny13
 framework = arduino
 board_upload.protocol = usbasp
 board_build.f_cpu = 1200000L
+upload_flags =
+    -v
+    -B8
