--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,10 +10,20 @@
 
 [env:attiny841]
 platform = atmelavr
-board = attiny13
+board = attiny841
 framework = arduino
 board_upload.protocol = usbasp
 board_build.f_cpu = 1200000L
 upload_flags =
     -v
-    -B8
+    -B16
+lib_deps =
+    elapsedMillis
+
+
+;[env:dueUSB]
+;platform = atmelsam
+;board = dueUSB
+;framework = arduino
+;lib_deps =
+;    elapsedMillis
