--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:attiny13a]
+[env:attiny841]
 platform = atmelavr
 board = attiny13
 framework = arduino
